crates/strider-analyze/tests/snapshots/v3__ppc64be__calling_convention__sink16.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "6" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="init\nf1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "7" -> "4" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "7" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "8" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "9" -> "7" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "9" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "10" -> "9" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "11" -> "9" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "11" [label="const 0x9c:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "10" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="StackStore u32\n→ ram[sp - 44]", shape=box3d, fillcolor="#20182a"];
  "12" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v13" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v13" -> "8" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "14" -> "8" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "14" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "12" [label="StackStore u32\n→ ram[sp - 40]", shape=box3d, fillcolor="#20182a"];
  "15" -> "12" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v16" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v16" -> "12" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "17" -> "12" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "17" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "18" -> "17" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "18" [label="init\nr10", shape=Mdiamond, fillcolor="#1a3a5c"];
  "15" [label="StackStore u32\n→ ram[sp - 36]", shape=box3d, fillcolor="#20182a"];
  "19" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v20" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v20" -> "15" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "21" -> "15" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "21" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "22" -> "21" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "22" [label="init\nr9", shape=Mdiamond, fillcolor="#1a3a5c"];
  "19" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "23" -> "19" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v24" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v24" -> "19" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "25" -> "19" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "25" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "26" -> "25" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "26" [label="init\nr8", shape=Mdiamond, fillcolor="#1a3a5c"];
  "23" [label="StackStore u32\n→ ram[sp - 28]", shape=box3d, fillcolor="#20182a"];
  "27" -> "23" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v28" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v28" -> "23" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "29" -> "23" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "29" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "30" -> "29" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "30" [label="init\nr7", shape=Mdiamond, fillcolor="#1a3a5c"];
  "27" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "31" -> "27" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v32" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v32" -> "27" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "33" -> "27" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "33" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "34" -> "33" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "34" [label="init\nr6", shape=Mdiamond, fillcolor="#1a3a5c"];
  "31" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "35" -> "31" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v36" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v36" -> "31" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "37" -> "31" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "37" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "38" -> "37" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "38" [label="init\nr5", shape=Mdiamond, fillcolor="#1a3a5c"];
  "35" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "39" -> "35" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v40" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v40" -> "35" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "41" -> "35" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "41" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "42" -> "41" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "42" [label="init\nr4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "39" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "43" -> "39" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v44" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v44" -> "39" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "45" -> "39" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "45" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "46" -> "45" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "46" [label="init\nr3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "43" [label="StackStore u64\n→ ram[sp - 80]", shape=box3d, fillcolor="#20182a"];
  "47" -> "43" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v48" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v48" -> "43" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "30" -> "43" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "47" [label="StackStore u64\n→ ram[sp - 72]", shape=box3d, fillcolor="#20182a"];
  "49" -> "47" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v50" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v50" -> "47" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "26" -> "47" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "49" [label="StackStore u64\n→ ram[sp - 64]", shape=box3d, fillcolor="#20182a"];
  "51" -> "49" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v52" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v52" -> "49" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "22" -> "49" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "51" [label="StackStore u64\n→ ram[sp - 56]", shape=box3d, fillcolor="#20182a"];
  "53" -> "51" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v54" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v54" -> "51" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "18" -> "51" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "53" [label="MemPartition[MemPartitionId(0)]", shape=trapezium, fillcolor="#3a1a4a"];
  "55" -> "53" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "55" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "3" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "56" -> "3" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "56" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "57" -> "56" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "57" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "58" -> "57" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "4" -> "57" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "58" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "59" -> "58" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "60" -> "58" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "60" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "61" -> "60" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "61" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "8" -> "61" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "62" -> "61" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "62" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "10" -> "62" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "63" -> "62" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "63" [label="const 0x94:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "59" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "64" -> "59" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "65" -> "59" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "65" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "66" -> "65" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "66" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "8" -> "66" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "67" -> "66" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "67" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "10" -> "67" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "68" -> "67" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "68" [label="const 0x8c:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "64" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "69" -> "64" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "70" -> "64" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "70" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "71" -> "70" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "71" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "8" -> "71" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "72" -> "71" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "72" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "10" -> "72" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "73" -> "72" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "73" [label="const 0x84:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "69" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "74" -> "69" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "75" -> "69" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "75" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "76" -> "75" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "76" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "8" -> "76" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "77" -> "76" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "77" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "10" -> "77" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "78" -> "77" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "78" [label="const 0x7c:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "74" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "79" -> "74" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "80" -> "74" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "80" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "81" -> "80" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "81" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "8" -> "81" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "82" -> "81" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "82" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "10" -> "82" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "83" -> "82" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "83" [label="const 0x74:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "79" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "84" -> "79" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "85" -> "79" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "85" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "86" -> "85" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "86" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "8" -> "86" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "87" -> "86" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "87" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "10" -> "87" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "88" -> "87" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "88" [label="const 0x6c:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "84" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "89" -> "84" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "90" -> "84" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "90" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "91" -> "90" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "91" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "8" -> "91" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "92" -> "91" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "92" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "10" -> "92" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "93" -> "92" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "93" [label="const 0x64:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "89" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "94" -> "89" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "95" -> "89" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "95" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "17" -> "95" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "94" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "96" -> "94" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "97" -> "94" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "97" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "21" -> "97" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "96" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "98" -> "96" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "99" -> "96" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "99" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "25" -> "99" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "98" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "100" -> "98" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "101" -> "98" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "101" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "29" -> "101" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "100" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "102" -> "100" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "103" -> "100" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "103" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "33" -> "103" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "102" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "104" -> "102" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "105" -> "102" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "105" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "37" -> "105" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "104" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "106" -> "104" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "107" -> "104" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "107" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "41" -> "107" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "106" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "45" -> "106" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "2" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "108" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "108" [label="StackStore u32\n→ ram[sp - 44]", shape=box3d, fillcolor="#20182a"];
  "8" -> "108" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v109" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v109" -> "108" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "56" -> "108" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
}
