crates/strider-analyze/tests/snapshots/v3__ppc64be__calling_convention__sink2.snap
---
source: crates/strider/tests/v3_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "6" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="init\nf1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "7" -> "4" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "7" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "8" -> "7" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "8" [label="arg[1] ← r4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "3" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "9" -> "3" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "9" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "10" -> "9" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "10" [label="arg[0] ← r3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "11" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v12" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v12" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "7" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "11" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "13" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v14" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v14" -> "11" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "9" -> "11" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "13" [label="StackStore u64\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "15" -> "13" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v16" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v16" -> "13" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "8" -> "13" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "15" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
